--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-    <head>
+    <head>    
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
+    </head>   
     <h1>Mimi</h1>
     <a href="home">Home</a>
     <a href="cooking">cooking</a>
     <a href="books">books</a>
     <a href="sewing">sewing</a>
-    </head>
+    
