--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
-    <head>    
+<html>
+  <head>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
-    </head>   
-    <h1>Mimi</h1>
-    <a href="home">Home</a>
-    <a href="cooking">cooking</a>
-    <a href="books">books</a>
-    <a href="sewing">sewing</a>
-    
+    <script src="prefixfree.js"></script>
+  </head>
+  
+  <body>
+<div class="sticker" id="coding">I LOVE <br>FLOWERS!</div>
+<div class="sticker" id="mimi">MIMI &amp; COCO</div>
+<div class="sticker" id="rainbows">rainbows</div>
+<div class="sticker" id="music">
+  <img height="180" src="music2.jpg">
+  <span id="musictext">Music</span>
+  </div>
+
+  </body>
+  
+</html>
