--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   </head>
   
   <body>
-<div class="sticker" id="coding">Cooking </div>
-<div class="sticker" id="mimi">Books</div>
-<div class="sticker" id="rainbows">Sewing</div>
-<div class="sticker" id="music">
+<div class="sticker" id="cooking">Cooking </div>
+<div class="sticker" id="books">Books</div>
+<div class="sticker" id="sewing">Sewing</div>
   <img height="180" src="music2.jpg">
   <span id="musictext">Music</span>
   </div>
