--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   </head>
   
   <body>
-<div class="sticker" id="cooking">Cooking </div>
-<div class="sticker" id="books">Books</div>
-<div class="sticker" id="sewing">Sewing</div>
+<div class="sticker" id="coding">I LOVE <br>FLOWERS!</div>
+<div class="sticker" id="mimi">MIMI &amp; COCO</div>
+<div class="sticker" id="rainbows">rainbows</div>
+<div class="sticker" id="music">
   <img height="180" src="music2.jpg">
   <span id="musictext">Music</span>
   </div>
