--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   
   <body>
-<div class="sticker" id="coding">I LOVE <br>FLOWERS!</div>
+<div class="sticker" id="coding"> Cooking </div>
 <div class="sticker" id="mimi">MIMI &amp; COCO</div>
 <div class="sticker" id="rainbows">rainbows</div>
 <div class="sticker" id="music">
