--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="sticker" id="rainbows">rainbows</div>
 <div class="sticker" id="music">
   <img height="180" src="music2.jpg">
-  <span id="musictext">Music</span>
+  <span id="musictext">piano</span>
   </div>
 
   </body>
