--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 <div class="sticker" id="coding">Cooking</div>
 <div class="sticker" id="mimi">Art</div>
-<div class="sticker" id="rainbows">rainbows</div>
+<div class="sticker" id="rainbows">piano</div>
 <div class="sticker" id="music">
   <img height="180" src="music2.jpg">
   <span id="musictext">piano</span>
