--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="sticker" id="mimi">Art</div>
 <div class="sticker" id="rainbows">piano</div>
 <div class="sticker" id="music">
-  <img height="180" src="music2.jpg">
+  <img height="180" src="music notes.jpg">
   <span id="musictext">piano</span>
   </div>
 
