--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   </head>
   
   <body>
-<div class="sticker" id="coding">Cooking</div>
+    <a href="https://www.w3schools.com"><div class="sticker" id="coding">Cooking</div></a>
+      
 <div class="sticker" id="mimi">Art</div>
 <div class="sticker" id="rainbows">piano</div>
 
