--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   
   <body>
-    <a href="https://www.w3schools.com"><div class="sticker" id="coding">Cooking</div></a>
+    <a href="cooking/"><div class="sticker" id="coding">Cooking</div></a>
       
 <div class="sticker" id="mimi">Art</div>
 <div class="sticker" id="rainbows">piano</div>
