--- a/cooking/index.html
+++ b/cooking/index.html
@@ -1,33 +1,5 @@
 <html>
-  
   <head>
-    <link rel="stylesheet" href="style.css">
+    <h>Cooking<h>
   </head>
-  
-  <body>
-    <h1>OREO MILKSHAKE</h1>
-   <h3>Ingredients:</h3>
-   <ul>
-     <h4>for the milkshake:</h4>
-     <li>2 ice cubes</li>
-     <li>400 ml milk</li>
-     <li>12 oreo biscuits</li>
-     <li>2 tbsp sugar</li>
-     <li>1/2 tsp vanilla extract</li>
-     <li>4 scoops chocolate ice cream</li>
-     <h4>for the garnish:</h4>
-     <li>spraying cream</li>
-     <li>sauce(e.g:chocolate,toffee)</li>
-   </ul>
-   <h3>Method:</h3>
-   <ol>
-     <li>First, pour your milk, sugar and vanilla into a blender and blend on a high speed for 1 minute.</li>
-     <li>Next, add in your Oreo biscuits and blend until well combined.</li>
-     <li>Then, add your chocolate ice cream in blend till combined</li>
-     <li>Pour your milkshake in to 2 glasses and spray your cream on top, squirt a bit of your sauce on top as well.</li>
-     <li>Enjoy!</li>
-   </ol>
-   
-  </body>
-  
 </html>
