--- a/cooking/index.html
+++ b/cooking/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
     <h1>Cooking<h1>
-      <a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>
+      <a href="https://mimidoodlegirl101.github.io/cooking/">Oreo milkshake</a>
   </head>
 </html>
