--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <a href="cooking/"><div class="sticker" id="coding">Cooking</div></a>
     <a href="cooking/"><div class="sticker" id="mimi">Art</div></a>
     <a href="cooking/"><div class="sticker" id="rainbows">piano</div></a>  
-
+    <a href="cooking/"><div class="sticker" id="coding">Yoga</div></a>
+    
   </body>
   
 </html>
