--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<html> 
+ <head> 
+    <link rel="stylesheet" href="style.css"> 
+     <script src="prefixfree.js"></script> 
+ </head> 
 
+<body> 
+ <a href="cooking/"><div class="sticker" id="coding">Cooking</div></a> 
+
+<div class="sticker" id="mimi">Art</div> 
+<div class="sticker" id="rainbows">piano</div> 
+
+</body> 
+
+</html>
