--- a/cooking/index.html
+++ b/cooking/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
     <h1>Cooking<h1>
-      <a href="oreo.milkshake">Oreo milkshake</a>
+      <a href="oreomilkshake.html">Oreo milkshake</a>
   </head>
 </html>
