--- a/cooking/index.html
+++ b/cooking/index.html
@@ -2,5 +2,6 @@
   <head>
     <h1>Cooking<h1>
       <a href="oreomilkshake.html">Oreo milkshake</a> 
+      <a href="lemoncake.html">Fastest ever lemon cake</a> 
   </head>
 </html>
