--- a/cooking/index.html
+++ b/cooking/index.html
@@ -1,7 +1,10 @@
 <html>
   <head>
+    <link rel="stylesheet" href="/style.css"> 
+     <script src="prefixfree.js"></script>
+  </head>
     <h1>Cooking<h1>
-      <a href="oreomilkshake.html">Oreo milkshake</a> 
+      <a href="oreomilkshake.html"><div class="sticker" id="coding">Oreo milkshake</div></a> 
       <a href="lemoncake.html">Fastest ever lemon cake</a> 
   </head>
 </html>
