--- a/cooking/index.html
+++ b/cooking/index.html
@@ -5,6 +5,6 @@
   </head>
     <h1>Cooking<h1>
       <a href="oreomilkshake.html"><div class="sticker" id="coding">Oreo milkshake</div></a> 
-      <a href="lemoncake.html">Fastest ever lemon cake</a> 
+      <a href="lemoncake.html"><div class="sticker" id="coding">Fastest ever lemon cake</div></a> 
   </head>
 </html>
