--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
  </head> 
 
 <body> 
- <a href="cooking/"><div class="sticker" id="coding">Cooking</div></a> 
-
-<div class="sticker" id="mimi">Art</div> 
-<div class="sticker" id="rainbows">piano</div> 
+<a href="cooking/"><div class="sticker" id="coding">Cooking</div></a> 
+<a href="art/"><div class="sticker" id="mimi">Art</div></a>  
+<a href="piano/"><div class="sticker" id="rainbows">piano</div></a>  
 
 </body> 
 
