--- a/art.html
+++ b/art.html
@@ -1,1 +1,10 @@
-
+<html>
+  <head>
+    <link rel="stylesheet" href="/style.css"> 
+     <script src="prefixfree.js"></script>
+  </head>
+    <h1>Cooking<h1>
+      <a href="bulletjournalling.html"><div class="sticker" id="mimi">Bullet journaling</div></a> 
+      <a href="crafthacks.html"><div class="sticker" id="mimi">Craft hacks</div></a> 
+  </head>
+</html>
