--- a/cooking/index.html
+++ b/cooking/index.html
@@ -4,7 +4,7 @@
      <script src="prefixfree.js"></script>
   </head>
     <h1>Cooking<h1>
-      <a href="oreomilkshake.html"><div class="sticker" id="coding">Oreo milkshake</div></a> 
-      <a href="lemoncake.html"><div class="sticker" id="coding">Fastest ever lemon cake</div></a> 
+      <a href="oreomilkshake.html"><div class="sticker" id="cooking">Oreo milkshake</div></a> 
+      <a href="lemoncake.html"><div class="sticker" id="cooking">Fastest ever lemon cake</div></a> 
   </head>
 </html>
