--- a/cooking/index.html
+++ b/cooking/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title> Welcome </title>
     <link rel="stylesheet" href="/style.css"> 
      <script src="prefixfree.js"></script>
   </head>
