--- a/art.html
+++ b/art.html
@@ -3,8 +3,8 @@
     <link rel="stylesheet" href="/style.css"> 
      <script src="prefixfree.js"></script>
   </head>
-    <h1>Cooking<h1>
-      <a href="bulletjournalling.html"><div class="sticker" id="mimi">Bullet journaling</div></a> 
+    <h1>Art<h1>
+      <a href="bulletjournalling.html"><div class="sticker" id="mimi">Bullet journalling</div></a> 
       <a href="crafthacks.html"><div class="sticker" id="mimi">Craft hacks</div></a> 
   </head>
 </html>
