--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body> 
 <a href="cooking/"><div class="sticker" id="coding">Cooking</div></a> 
 <a href="art/"><div class="sticker" id="mimi">Art</div></a>  
-<a href="room decor/"><div class="sticker" id="rainbows">room decor</div></a>  
+<a href="room-decor/"><div class="sticker" id="rainbows">room-decor</div></a>  
 
 </body> 
 
